Remove text-align rule (fix #507)

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -20,7 +20,6 @@
   border-radius: 0.25rem;
   font-size: 0.875rem;
   line-height: 1.4;
-  text-align: center;
   background-color: #333;
   overflow: hidden;
   transition-property: visibility, opacity, transform;
